--- a/About.html
+++ b/About.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me - Rohit Sharma</title>
+    <title>About Me - Suraj</title>
     <link rel="stylesheet" href="royal.css">
     <style>
         * {
@@ -106,7 +106,7 @@
 
         <!-- Profile Section -->
         <div class="profile-section">
-            <img src="C:\Users\Suraj\OneDrive\Pictures\IMAGES\WhatsApp Image 2025-03-20 at 15.00.17_644b7759.jpg" alt="Rohit Sharma">
+            <img src="WhatsApp Image 2025-03-20 at 15.00.17_644b7759.jpg" alt="Rohit Sharma">
             <h2>SURAJ VISHWAKARMA</h2>
         </div>
 
