--- a/About.html
+++ b/About.html
@@ -106,7 +106,7 @@
 
         <!-- Profile Section -->
         <div class="profile-section">
-            <img src="WhatsApp Image 2025-03-20 at 15.00.17_644b7759.jpg" alt="Rohit Sharma">
+            <img src="WhatsApp Image 2025-03-20 at 15.00.17_644b7759.jpg" alt="Suraj">
             <h2>SURAJ VISHWAKARMA</h2>
         </div>
 
@@ -114,8 +114,8 @@
         <div class="section">
             <h3>🎓 Education</h3>
             <ul>
-                <li>Bachelor of Computer Application [BCA ] - XYZ University (2022)</li>
-                <li>Diploma in Web Developer - ABC Institute (2024)</li>
+                <li>Bachelor of Computer Application [BCA ] - Seshasripuram First Grade College ( Bangalore City University )</li>
+                <li> Class 12th - Sri Thakur Ji Ram Laxman Janki Inter College ( Uttar Pradesh )<li>
             </ul>
         </div>
 
